[project]
name = "hardy-optimods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "atsuhiro", email = "jhuim08@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "flax>=0.12.2",
    "flower>=2.0.1",
    "jax>=0.8.2",
    "jaxopt>=0.8.5",
    "matplotlib>=3.10.8",
    "mip>=1.15.0",
    "optax>=0.2.6",
    "ortools>=9.14.6206",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.11.9",
    "redis>=6.4.0",
    "sqlmodel>=0.0.24",
    "streamlit>=1.49.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.35.0",
    "codableopt>=0.1.2",
    "psycopg[binary]>=3.3.3",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hardy_optimods"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hardy_optimods",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
    "zensical>=0.0.27",
]
